syntax = "proto3";

package schema;

message Contracts {
  repeated Contract contracts = 1;
}

message Contract {
    string address = 1;
    string name = 2;
    string symbol = 3;
    string uri = 4; 
}

message Transfers {
  repeated Transfer transfers = 1;
}

message Transfer {
  string from = 1;
  string to = 2;
  string token_id = 3;
  string tx_hash = 4;
  string token_name = 5;
  string token_symbol = 6;
  string token_uri = 7;
}

message Approval {
  string owner = 1;
  string approved = 2;
  string token_id = 3;
  string tx_hash = 4;
  string token_name = 6;
  string token_symbol = 7;
  string token_uri = 8;
}

message Approvals {
  repeated Approval approvals = 1;
}
